# frontend-api

./: .dockerignore  README.md  Taskfile.yml
.github/workflows/: cd.yml  ci.yml
core/db/models/: base.py
core/db/models/users/: users.py
e-love-frontend-api/: .dockerignore  .env  .gitignore  .mypy.ini  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yml  alembic.ini  compose.yml  main.py  pyproject.toml
e-love-frontend-api/alembic/: env.py
e-love-frontend-api/alembic/versions/: 0b6fc3c8d79c_feat_uc_4_add_new_tables_and_relations.py  351afa802ae4_uc_37_add_supabase_field_usr_table.py  5983095292a3_uc_11_add_posts_categories_model_and_.py  67577aefe0a2_uc_16_add_user_interaction_model.py  7c069b9425a3_add_new_additional_tables.py  8aabe8b3a268_initial_migration.py  942629789895_uc_11_add_unique_attrs_constraints.py  94d192a96409_uc_34_upgrade_user_images_table.py  b2d3f56acb1c_uc_34_update_user_imgs_table.py  caa57bc6a5b3_add_initial_database_models_for_fe_api_.py  e6a9bc23436c_impr_uc_12_update_current_db_models.py  f1323fc5290c_add_initial_database_tables_and_.py  ffdccf47792f_uc_37_update_user_table_supabase.py
e-love-frontend-api/api/clients/: ai_microservice_client.py  chat_microservice_client.py
e-love-frontend-api/api/conn_manager/: conn_manager.py
e-love-frontend-api/api/v1/endpoints/categories/: categories.py
e-love-frontend-api/api/v1/endpoints/chat/: chat.py
e-love-frontend-api/api/v1/endpoints/user_categories/: user_categories.py
e-love-frontend-api/api/v1/endpoints/user_gender/: user_gender.py
e-love-frontend-api/api/v1/endpoints/user_images/: user_images.py
e-love-frontend-api/api/v1/endpoints/user_interaction/: user_interaction.py
e-love-frontend-api/api/v1/endpoints/user_post/: user_post.py
e-love-frontend-api/api/v1/endpoints/user_role/: user_role.py
e-love-frontend-api/api/v1/endpoints/user_role_association/: user_roles_association.py
e-love-frontend-api/api/v1/endpoints/user_status/: user_status.py
e-love-frontend-api/api/v1/endpoints/users/: users.py
e-love-frontend-api/api/v1/endpoints/users_harbor/: users_harbor.py
e-love-frontend-api/api/v1/endpoints/users_matching/: users_matching.py
e-love-frontend-api/api/v1/router/: router.py
e-love-frontend-api/auth/: config.py  jwt.py  security.py
e-love-frontend-api/configuration/: config.py  database.py
e-love-frontend-api/core/db/models/: base.py
e-love-frontend-api/core/db/models/audit_logs/: audit_logs.py
e-love-frontend-api/core/db/models/categories/: categories.py
e-love-frontend-api/core/db/models/intermediate_models/: __init__.py  posts_categories.py  user_categories.py  user_genders.py  user_roles.py
e-love-frontend-api/core/db/models/posts/: user_post.py
e-love-frontend-api/core/db/models/users/: user_gender.py  user_images.py  user_interaction.py  user_role.py  user_roles.py  user_status.py  users.py
e-love-frontend-api/core/schemas/categories/: categories_schema.py
e-love-frontend-api/core/schemas/chat/conversation/: conversation_schema.py
e-love-frontend-api/core/schemas/errors/: httperror.py
e-love-frontend-api/core/schemas/posts/: user_post_schema.py
e-love-frontend-api/core/schemas/user_categories_association/: user_categories_association_schema.py
e-love-frontend-api/core/schemas/user_gender/: user_gender_schema.py
e-love-frontend-api/core/schemas/user_images/: user_images_schema.py
e-love-frontend-api/core/schemas/user_interaction/: user_interaction_schema.py
e-love-frontend-api/core/schemas/user_role/: user_role_schema.py
e-love-frontend-api/core/schemas/user_role_association/: user_role_association_schema.py
e-love-frontend-api/core/schemas/user_status/: user_status_schema.py
e-love-frontend-api/core/schemas/users/: user_schema.py
e-love-frontend-api/core/schemas/users_categories/: users_categories_schema.py
e-love-frontend-api/core/services/: base_service.py  users.py
e-love-frontend-api/core/services/categories/: categories.py
e-love-frontend-api/core/services/user_categories/: user_categories.py
e-love-frontend-api/core/services/user_gender/: user_gender.py
e-love-frontend-api/core/services/user_genders/: user_genders.py
e-love-frontend-api/core/services/user_images/: user_images.py
e-love-frontend-api/core/services/user_interaction/: user_interaction.py
e-love-frontend-api/core/services/user_post/: user_post.py
e-love-frontend-api/core/services/user_role/: user_role.py
e-love-frontend-api/core/services/user_roles/: user_roles.py
e-love-frontend-api/core/services/user_status/: user_status.py
e-love-frontend-api/core/services/users/: users.py
e-love-frontend-api/core/services/users_harbor/: users_harbor.py
e-love-frontend-api/core/services/users_matching/: users_matching_service.py
e-love-frontend-api/dependencies/: get_chat_microservice_client.py  get_current_user.py  require_role.py  validate_query_params.py
e-love-frontend-api/docker/: app.env
e-love-frontend-api/docker/prod/: docker-compose.prod.yml
e-love-frontend-api/easter_eggs/: greeting.py
e-love-frontend-api/exceptions/: exception_handler.py  exception_map.py
e-love-frontend-api/flows/data_extraction_flow/: daily_users_data_export.py
e-love-frontend-api/flows/db_context/: get_db_context.py
e-love-frontend-api/flows/tasks/send_unloaded_data_to_ai_service/: send_csv_to_ai_task.py
e-love-frontend-api/flows/tasks/transform_unloaded_data_to_csv/: save_to_csv_task.py
e-love-frontend-api/flows/tasks/users_data_unloading/: extract_users_task.py
e-love-frontend-api/flows/test_flow/: hello_world.py
e-love-frontend-api/scripts/: check_venv.py
e-love-frontend-api/scripts/db_scripts/: clean_db.py  populate_db.py
e-love-frontend-api/services/users/: users.py
e-love-frontend-api/utils/: custom_pagination.py
e-love-frontend-api/utils/chat/: connect_to_chat_service.py  listen_chat_service.py
e-love-frontend-api/utils/enums/: common_exceptions.py  matching_type.py
e-love-frontend-api/utils/functions/: get_total_count.py
scripts/: check_venv.py
