[tool.poetry]
name = "e-love-frontend-api"
version = "0.1.0"
description = ""
authors = ["paketoff <kekisreal228@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"
pymysql = "^1.1.1"
cryptography = "^43.0.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
colorlog = "^6.8.2"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
faker = "^28.4.1"
isort = "^5.13.2"
flake8 = "^7.1.1"
mypy = "^1.11.2"
pre-commit = "^3.4.0"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.svn
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | \.env
  | \.tox
  | \.eggs
  | \.idea
  | \.vscode
  | build
  | dist
  | htmlcov
  | .*/migrations
  | alembic/versions
  | __pycache__
  | node_modules
  | tmp
  | temp
  | data
  | datasets
  | .*\.egg-info
  | \.cache
  | easter_eggs
)/'''

[tool.flake8]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".env",
    "alembic/versions",
    "migrations",
    ".mypy_cache",
    ".pytest_cache",
    ".idea",
    ".vscode",
    "node_modules",
    "tmp",
    "temp",
    "data",
    "datasets",
    "easter_eggs"
]

[tool.isort]
line_length = 100
skip = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".env",
    "alembic/versions",
    "migrations",
    ".mypy_cache",
    ".pytest_cache",
    ".idea",
    ".vscode",
    "node_modules",
    "tmp",
    "temp",
    "data",
    "datasets",
    "easter_eggs"
]

[tool.mypy]
exclude = '''
(\.git|
__pycache__|
build|
dist|
\.venv|
\.env|
alembic/versions|
migrations|
\.mypy_cache|
\.pytest_cache|
\.idea|
\.vscode|
node_modules|
tmp|
temp|
data|
easter_eggs|
datasets)
'''


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

